2005-01-16  Angus Leeming  <leeming@lyx.org>

	* lyx_main.[Ch] (init): rewrite code to prepend the CWD to the PATH
	for MacOSX and Windows to use prependEnvPath.
	Strip out the hard-coded block to add elements to the PATH for
	MacOSX and replace it with a call to prependEnvPath using the
	contents of LyXRC::path_prefix.
	(queryUserLyXDir): strip out the code to run reconfigure, instead
	returning a boolean indicating the necessity to do so.
	(reconfigureUserLyXDir): contains the code to reconfigure the
	user support directory. Is now called after the various LyXRC data
	files have been read.

	* lyxrc.[Ch]: add path_prefix var and code to read/write it.

2005-01-14  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* converter.[Ch] (convert): take a new parameter try_default. Use
	a default converter (imagemagick) if try_default is true.

2005-01-13  Angus Leeming  <leeming@lyx.org>

	* lyxrc.C (read): use LyXRC::cygwin_path_fix to set the value of
	os::cygwin_path_fix.
	(write): output LyXRC::cygwin_path_fix as necessary.

2005-01-02  Kayvan Sylvan  <kayvan@sylvan.com>

	* lyxrc.h:
	* lyxrc.C (read): Added RC_CYGWIN_PATH_FIX, cygwin_path_fix.

2005-01-12  Angus Leeming  <leeming@lyx.org>

	* lyx_main.C (init): set the PATH variable to include the
	directory containing the LyX binary when running on Mac or Windows.

2005-01-12  Angus Leeming  <leeming@lyx.org>

	* lyx_main.C (init): remove cruft that purports to set the locale
	dir. It doesn't and is not needed anyway.

2005-01-10  Angus Leeming  <leeming@lyx.org>

	* Makefile.am: remove the lyx_main.C special casing.

	* BufferView_pimpl.C:
	* bufferlist.C:
	* exporter.C:
	* lyx_cb.C:
	* lyx_main.C:
	* lyxfunc.C:
	* messages.C: use support/package.h to provide the paths to the
	various directories used by LyX.

2005-01-09  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* CutAndPaste.C (pasteSelectionHelper): fix bug 1332 (preserve the
	layout if pasting into an empty paragraph)
