@@ -1,3 +1,8 @@
+2005-01-17  Angus Leeming  <leeming@lyx.org>
+
+	* tex_helpers.C (rescanTexStyles): prepend the name of the
+	"TeXFiles" script with "sh ". Workaround for a brain-dead Windows.
+
 2005-01-10  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>
 
 	* ControlErrorList.C (goTo): fix the commented-out code (bug
